<resources>
    <string name="app_name">NoteWakeup</string>
    <string name="type_your_title">Note title</string>
    <string name="type_something">Type note here…</string>
    <string name="done">Save</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">Share as Image</string>
    <string name="share_as_pdf">Share as PDF</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>
    <string name="attach_file">Attach File</string>
    <string name="success_note_saved">Note saved successfully</string>
    <string name="success_note_delete">Note deleted successfully!</string>
    <string name="success_note_update">Note update successfully!</string>
    <string name="enternotetitle">Please enter Note!</string>
    <string name="no_data_found">No Notes Found!</string>
    <string name="tap_add_new_note">Tap the Add button to create a note</string>
    <string name="edit">Edit</string>
    <string name="share_message">\nNoteTitle: %s, \nNoteBody: %s, \nCreatedAt: %s \n\nVisit: https://github.com/meshramaravind/NoteWakeup</string>
    <string name="search">Search</string>
    <string name="note">Note</string>
    <string name="search_your_notes">Search your notes…</string>


</resources>